# python-anyconfig-fit-backend

./: LICENSE.MIT  MANIFEST.in  NEWS  README.rst  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
pkg/: package.spec.in
src/anyconfig_fit_backend/: __init__.py  parser.py
tests/: constants.py  requirements.txt  test_constants.py  test_parser.py  test_plugin.py
tests/res/: README.md
tests/res/ng/: README.md
tests/res/ok/: README.md
