# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean sdist bdist_wheel

[metadata]
name = anyconfig-fit-backend
# version = attr: anyconfig_fit_backend.__version__
description = Backend module for python-anyconfig to load FIT data files
long_description = file: README.rst
author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = MIT
url = https://github.com/ssato/python-anyconfig-fit-backend
project_urls =
    CI: Github Actions = https://github.com/ssato/python-anyconfig-fit-backend/actions
    Download = https://pypi.org/project/anyconfig-fit-backend/
    Download RPMs = https://copr.fedoraproject.org/coprs/ssato/python-anyconfig/
    Bug Tracker = https://github.com/ssato/python-anyconfig-fit-backend/issues
    Source = https://github.com/ssato/python-anyconfig-fit-backend
platforms =
    any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:

# minimum dependencies.
install_requires =
    anyconfig

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
anyconfig_backends =
    fit = anyconfig_fit_backend:Parser

[tool:pytest]
addopts = --cov=src -vv --profile --profile-svg -n auto
python_files =
    test_*.py

testpaths =
    tests

# vim:sw=4:ts=4:et:
